# maniptools

./: .gitignore  CMakeLists.txt  README.md
include/: Common.hpp  DualNumberTools.hpp  I_JointController.hpp  JointControllerLerp.hpp  JointControllerSnap.hpp  Manip5Dof.hpp  ManipNDof.hpp  PathPlanningTools.hpp  SimClock.hpp  TwistJoint.hpp  UnitQuaternion.hpp  maniptools_include.hpp  skew.hpp
include/JointController/: I_JointController.hpp  JointControllerBase.hpp  JointControllerSnap.hpp  JointControllerStepResponse.hpp
src/: Common.cpp  DualNumberTools.cpp  JointControllerLerp.cpp  JointControllerSnap.cpp  Manip5Dof.cpp  ManipNDof.cpp  PathPlanningTools.cpp  SimClock.cpp  TwistJoint.cpp  UnitQuaternion.cpp  manip5dof_tracecircle.cpp  my_test.cpp  skew.cpp
src/JointController/: JointControllerBase.cpp  JointControllerSnap.cpp  JointControllerStepResponse.cpp
test/: JointControllerMock.hpp  dual_numbers_test.cpp  joint_controller_test.cpp  manipndof_test.cpp  sclerp_test.cpp  simclock_test.cpp  skew_test.cpp  twist_test.cpp
